--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2537,6 +2537,37 @@ input, select, textarea {
 
 
 
+
+
+
+/* Custom Loader */ 
+	.loader{
+		position: fixed;
+		z-index: 99;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: #000000;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.loader.hidden {
+		animation: loaderFadeOut 1s;
+		animation-fill-mode: forwards;
+	}
+
+	@keyframes loaderFadeOut {
+		100% {
+			opacity: 0;
+			visibility: hidden;
+		}
+	}
+
+
+
 /* Form */
 
 	form {
